# ee-metadata

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint-and-format.sh
.github/workflows/: publish.yml  test.yml
docs/: INSTALLATION.md  PACKAGING.md  metadata-integration-plan.md
ee_metadata/: __init__.py  auth.py  cli.py  main.py  resume_store.py  token_storage.py  upload.py
ee_metadata/commands/: __init__.py  auth_cmd.py  upload_cmd.py
scripts/: publish.sh  release.sh
tests/: conftest.py  test_auth.py  test_ensure_valid_token.py  test_resume_store.py  test_token_storage.py  test_upload.py
